--- a/informacion.html
+++ b/informacion.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Lunar Lander</title>
-		<meta charset=UTF-8>
-		<meta name="description" content="Página web oficial del juego Luna Lander">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel='stylesheet' media='screen and (min-width: 961px)' href='css/d.css'>
-		<link rel='stylesheet' media='screen and (max-width: 960px)' href='css/m.css'>
-	</head>
-	<body>
-		<div id="nave">
-		 	<img id="imgNave" src="img/nave.png" alt="img nave">
-		</div>
-	 	<div class="a">
-			<div id="cpanel">	
-				<div id="fuel"> 
-					Fuel
-					<div id="contenedorBarra">
-						<div id="barra"></div>
-					</div>	
-				</div>
-				<div id="divAltura"> 
-					<div id="altura">
-						<img id="indicador" src="img/indicador.png" alt="Indicador">
-					</div>
-				</div>
-				<div id="divVelocidad"> 
-					<img id="aguja" src="img/aguja.png" alt="Aguja">
-				</div>
-			</div>
-	 	</div>
-		<div class="c">
-			<div id="menu">
-				<img id="info" src="img/infobutton.png" alt="Información">
-				<img id="ajustes" src="img/settingsbutton.png" alt="Ajustes">
-				<img id="pause" src="img/pause.png" alt="Pausar">
-				<img id="play" src="img/playbutton.png" alt="Play">
-			</div>	
-		</div>
-		<div id="derecha">
-			<img id="mostrar" src="img/menu.png" alt="Menú">
-			<div id="divMotor">
-				<img id="motor" src="img/button1.png" alt="Botón motor">
-			</div>
-			<div id="divReiniciar">
-				<img id="reiniciar" src="img/tryagain.png" alt="Reiniciar">
-			</div>
-		</div>
-		<div id="divLuna">
-			<img src="img/luna.png" alt="Luna" id="luna">
-		</div>
-		<div id="contenedorInfIns">
-			<div id="informacionMenu">
-				<h1> Lunar Lander <h1>
-				<p>
-					Creado por: Marc Antoni Román Martínez
-					<br>
-					Curso: 2017/18
-					<br>
-					IES Borja Moll
-				</p>	
-				<a href="index.html"><div id="volverInf">Volver</div></a>
-			</div>
-		</div>
-	</body>
-</html>
+<!DOCTYPE html><html><head><title>Lunar Lander</title><meta charset=UTF-8><meta name="description" content="Página web oficial del juego Luna Lander"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel='stylesheet' media='screen and (min-width: 961px)' href='css/d.css'><link rel='stylesheet' media='screen and (max-width: 960px)' href='css/m.css'></head><body><div id="nave"> <img id="imgNave" src="img/nave.png" alt="img nave"></div><div class="a"><div id="cpanel"><div id="fuel"> Fuel<div id="contenedorBarra"><div id="barra"></div></div></div><div id="divAltura"> <div id="altura"><img id="indicador" src="img/indicador.png" alt="Indicador"></div></div><div id="divVelocidad"> <img id="aguja" src="img/aguja.png" alt="Aguja"></div></div></div><div class="c"><div id="menu"><img id="info" src="img/infobutton.png" alt="Información"><img id="ajustes" src="img/settingsbutton.png" alt="Ajustes"><img id="pause" src="img/pause.png" alt="Pausar"><img id="play" src="img/playbutton.png" alt="Play"></div></div><div id="derecha"><img id="mostrar" src="img/menu.png" alt="Menú"><div id="divMotor"><img id="motor" src="img/button1.png" alt="Botón motor"></div><div id="divReiniciar"><img id="reiniciar" src="img/tryagain.png" alt="Reiniciar"></div></div><div id="divLuna"><img src="img/luna.png" alt="Luna" id="luna"></div><div id="contenedorInfIns"><div id="informacionMenu"><h1> Lunar Lander <h1><p>Creado por: Marc Antoni Román Martínez<br>Curso: 2017/18<br>IES Borja Moll</p><a href="index.html"><div id="volverInf">Volver</div></a></div></div></body></html>
