--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div id="reanudar">Reanudar</div>
 				<br>
 				<br>
-				<div id="ajustesMovil">Dificultad</div>
+				<div id="ajustesMovil">Ajustes</div>
 				<br>
 				<br>
 				<div id="instrucciones">Instrucciones</div>
